--- a/angular.json
+++ b/angular.json
@@ -106,6 +106,9 @@
             ],
             "scripts": [ "./node_modules/hammerjs/hammer.min.js"]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
