--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/hammerjs": "^2.0.40",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.3",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
